--- a/src/main/resources/templates/collection_blog.html
+++ b/src/main/resources/templates/collection_blog.html
@@ -44,163 +44,174 @@
     <i class="sidebar icon"></i>
   </a>
 </nav>
-<div cLass="ui attached pointing menu">
+<!--选择栏-->
+<div cLass="ui attached pointing menu" style="margin-top: 4.4em;">
   <div class="ui container">
     <div class="right menu">
-      <a href="#" th:href="@{/admin/resources/input}" class="item">考研博客</a>
-      <a href="#" th:href="@{/admin/resources}" class="blue active item">社区帖子</a>
+      <a href="#" th:href="@{/collection/resource/list}" class="blue item">考研博客</a>
+      <a href="#" th:href="@{/collection/blog/list}" class="blue active item">社区帖子</a>
     </div>
+    </di>
   </div>
 </div>
 
+
 <!--中间内容-->
-<div class="m-container-small m-padded-tb-big">
-  <div class="ui container">
-    <!--header -->
-    <div class="ui top attached segment"> <!-- segment:占定一个空间 attached:附加/连接-->
-      <div class="ui middle aligned two column grid"> <!-- middle aligned:垂直方向居中 -->
-        <div class="column">
-          <h4 class="ui header">收藏数量</h4>
+<div class="m-container-plus m-padded-tb-big" style="padding-top: 4em !important;" id="contentDiv">
+  <div class="ui stackable grid"> <!--id="example1"-->
+    <!--左侧主体-->
+    <div class="eleven wide column">
+      <div class="ui container">
+        <!--header -->
+        <div class="ui top attached segment"> <!-- segment:占定一个空间 attached:附加/连接-->
+          <div class="ui middle aligned two column grid"> <!-- middle aligned:垂直方向居中 -->
+            <div class="column">
+              <h4 class="ui header">收藏数量</h4>
+            </div>
+            <div class="right aligned column">
+              共 <h3 class="ui orange header m-inline-block m-text-thin" th:text="${totalCollectionsCount}">
+              16</h3> 篇
+            </div>
+          </div>
         </div>
-        <div class="right aligned column">
-          共 <h3 class="ui orange header m-inline-block m-text-thin" th:text="*{page.totalElements}">
-          16</h3> 篇
+        <br>
+
+        <th:block th:each="collectionList : ${groupedCollectionList}">
+          <h3 class="ui center aligned header m-text-header-thin" th:if="${not #lists.isEmpty(collectionList)}"
+              th:text="${#dates.format(collectionList?.get(0)?.time, 'yyyy-MM')}">9月</h3>
+          <div class="ui fluid vertical menu">
+            <a href="#" target="_blank" class="item m-margin-top-mini" th:each="collection : ${collectionList}"
+               th:href="@{/user_blog/{id}(id=${collection.id})}">
+                <span>
+                    <span th:text="${collection.title}">兰花熊掌</span>
+                </span>
+              <div class="ui orange basic left pointing label" th:text="${collection.tag}">标签
+              </div>
+            </a>
+            <!--/*-->
+            <a href="#" target="_blank" class="item m-margin-top-mini">
+                <span>
+                    <span th:text="${blog.title}">兰花熊掌</span>
+                </span>
+              <div class="ui orange basic left pointing label" th:text="${#dates.format(blog.updateTime, 'MMMdd')}">标签
+              </div>
+            </a>
+            <!--*/-->
+          </div>
+          <!--/*-->
+          <h3 class="ui center aligned header m-text-header-thin">8月</h3>
+          <div class="ui fluid vertical menu">
+            <a href="#" target="_blank" class="item m-margin-top-mini">
+                <span>
+                    <span th:text="${blog.title}">冰糖血燕窝</span>
+                </span>
+              <div class="ui orange basic left pointing label" th:text="${#dates.format(blog.updateTime, 'MMMdd')}">
+                8月07
+              </div>
+            </a>
+            <a href="#" target="_blank" class="item m-margin-top-mini">
+                <span>
+                    <span th:text="${blog.title}">冰糖血燕窝</span>
+                </span>
+              <div class="ui orange basic left pointing label" th:text="${#dates.format(blog.updateTime, 'MMMdd')}">
+                8月22
+              </div>
+            </a>
+            <a href="#" target="_blank" class="item m-margin-top-mini">
+                <span>
+                    <span th:text="${blog.title}">冰糖血燕窝</span>
+                </span>
+              <div class="ui orange basic left pointing label" th:text="${#dates.format(blog.updateTime, 'MMMdd')}">
+                8月23
+              </div>
+            </a>
+          </div>
+          <h3 class="ui center aligned header m-text-header-thin">7月</h3>
+          <div class="ui fluid vertical menu">
+            <a href="#" target="_blank" class="item m-margin-top-mini">
+                <span>
+                    <span th:text="${blog.title}">佛跳墙</span>
+                </span>
+              <div class="ui orange basic left pointing label" th:text="${#dates.format(blog.updateTime, 'MMMdd')}">
+                7月07
+              </div>
+            </a>
+            <a href="#" target="_blank" class="item m-margin-top-mini">
+                <span>
+                    <span th:text="${blog.title}">佛跳墙</span>
+                </span>
+              <div class="ui orange basic left pointing label" th:text="${#dates.format(blog.updateTime, 'MMMdd')}">
+                7月22
+              </div>
+            </a>
+            <a href="#" target="_blank" class="item m-margin-top-mini">
+                <span>
+                    <span th:text="${blog.title}">佛跳墙</span>
+                </span>
+              <div class="ui orange basic left pointing label" th:text="${#dates.format(blog.updateTime, 'MMMdd')}">
+                7月23
+              </div>
+            </a>
+            <a href="#" target="_blank" class="item m-margin-top-mini">
+                <span>
+                    <span th:text="${blog.title}">佛跳墙</span>
+                </span>
+              <div class="ui orange basic left pointing label" th:text="${#dates.format(blog.updateTime, 'MMMdd')}">
+                7月23
+              </div>
+            </a>
+          </div>
+          <!--*/-->
+        </th:block>
+      </div>
+    </div>
+
+    <!--粘性侧边栏-->
+    <div class="five wide column">
+      <div class="ui sticky">
+        <!--申请列表-->
+        <div class="ui container segment">
+          <h3>
+            热度前八贴
+          </h3>
+          <div class="ui relaxed list">
+            <a class="item" th:href="@{/user_blog/{id}(id=${blog.id})}" th:each="blog : ${hotBlogs}">
+              <i class="right triangle icon"></i>
+              <div class="content">
+                <div class="header" style="font-weight: normal; font-size: 14px" th:text="${blog.title}">图标对齐方式
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+        <!--足迹展示-->
+        <div class="ui container segment">
+          <h3>
+            收藏量前八贴
+          </h3>
+          <div class="ui relaxed list">
+            <a class="item" th:href="@{/user_blog/{id}(id=${blog.id})}" target="_blank"
+               th:each="blog : ${collectionMaxB}">
+              <i class="right triangle icon"></i>
+              <div class="content">
+                <div class="header" style="font-weight: normal; font-size: 14px" th:text="${blog.title}">图标对齐方式
+                </div>
+              </div>
+            </a>
+          </div>
         </div>
       </div>
     </div>
-    <br>
+  </div>
 
-    <th:block th:each="item : ${recordMap}">
-      <h3 class="ui center aligned header m-text-header-thin" th:text="${item.key}">9月</h3>
-      <div class="ui fluid vertical menu">
-        <a href="#" th:href="@{/blog/{id}(id=${blog.id})}" target="_blank" class="item m-margin-top-mini"
-           th:each="blog : ${item.value}">
-                <span>
-                    <span th:text="${blog.title}">兰花熊掌</span>
-                </span>
-          <div class="ui orange basic left pointing label" th:text="${#dates.format(blog.updateTime, 'MMMdd')}">9月03
-          </div>
-        </a>
-        <!--/*-->
-        <a href="#" target="_blank" class="item m-margin-top-mini">
-                <span>
-                    <span th:text="${blog.title}">兰花熊掌</span>
-                </span>
-          <div class="ui orange basic left pointing label" th:text="${#dates.format(blog.updateTime, 'MMMdd')}">9月11
-          </div>
-        </a>
-        <a href="#" target="_blank" class="item m-margin-top-mini">
-                <span>
-                    <span th:text="${blog.title}">兰花熊掌</span>
-                </span>
-          <div class="ui orange basic left pointing label" th:text="${#dates.format(blog.updateTime, 'MMMdd')}">9月11
-          </div>
-        </a>
-        <a href="#" target="_blank" class="item m-margin-top-mini">
-                <span>
-                    <span th:text="${blog.title}">兰花熊掌</span>
-                </span>
-          <div class="ui orange basic left pointing label" th:text="${#dates.format(blog.updateTime, 'MMMdd')}">9月11
-          </div>
-        </a>
-        <!--*/-->
-      </div>
-      <!--/*-->
-      <h3 class="ui center aligned header m-text-header-thin">8月</h3>
-      <div class="ui fluid vertical menu">
-        <a href="#" target="_blank" class="item m-margin-top-mini">
-                <span>
-                    <span th:text="${blog.title}">冰糖血燕窝</span>
-                </span>
-          <div class="ui orange basic left pointing label" th:text="${#dates.format(blog.updateTime, 'MMMdd')}">8月07
-          </div>
-        </a>
-        <a href="#" target="_blank" class="item m-margin-top-mini">
-                <span>
-                    <span th:text="${blog.title}">冰糖血燕窝</span>
-                </span>
-          <div class="ui orange basic left pointing label" th:text="${#dates.format(blog.updateTime, 'MMMdd')}">8月22
-          </div>
-        </a>
-        <a href="#" target="_blank" class="item m-margin-top-mini">
-                <span>
-                    <span th:text="${blog.title}">冰糖血燕窝</span>
-                </span>
-          <div class="ui orange basic left pointing label" th:text="${#dates.format(blog.updateTime, 'MMMdd')}">8月23
-          </div>
-        </a>
-      </div>
-      <h3 class="ui center aligned header m-text-header-thin">7月</h3>
-      <div class="ui fluid vertical menu">
-        <a href="#" target="_blank" class="item m-margin-top-mini">
-                <span>
-                    <span th:text="${blog.title}">佛跳墙</span>
-                </span>
-          <div class="ui orange basic left pointing label" th:text="${#dates.format(blog.updateTime, 'MMMdd')}">7月07
-          </div>
-        </a>
-        <a href="#" target="_blank" class="item m-margin-top-mini">
-                <span>
-                    <span th:text="${blog.title}">佛跳墙</span>
-                </span>
-          <div class="ui orange basic left pointing label" th:text="${#dates.format(blog.updateTime, 'MMMdd')}">7月22
-          </div>
-        </a>
-        <a href="#" target="_blank" class="item m-margin-top-mini">
-                <span>
-                    <span th:text="${blog.title}">佛跳墙</span>
-                </span>
-          <div class="ui orange basic left pointing label" th:text="${#dates.format(blog.updateTime, 'MMMdd')}">7月23
-          </div>
-        </a>
-        <a href="#" target="_blank" class="item m-margin-top-mini">
-                <span>
-                    <span th:text="${blog.title}">佛跳墙</span>
-                </span>
-          <div class="ui orange basic left pointing label" th:text="${#dates.format(blog.updateTime, 'MMMdd')}">7月23
-          </div>
-        </a>
-      </div>
-      <h3 class="ui center aligned header m-text-header-thin">6月</h3>
-      <div class="ui fluid vertical menu">
-        <a href="#" target="_blank" class="item m-margin-top-mini">
-                <span>
-                    <span th:text="${blog.title}">野生大黄牛</span>
-                </span>
-          <div class="ui orange basic left pointing label" th:text="${#dates.format(blog.updateTime, 'MMMdd')}">6月04
-          </div>
-        </a>
-        <a href="#" target="_blank" class="item m-margin-top-mini">
-                <span>
-                    <span th:text="${blog.title}">野生大黄牛</span>
-                </span>
-          <div class="ui orange basic left pointing label" th:text="${#dates.format(blog.updateTime, 'MMMdd')}">6月14
-          </div>
-        </a>
-        <a href="#" target="_blank" class="item m-margin-top-mini">
-                <span>
-                    <span th:text="${blog.title}">野生大黄牛</span>
-                </span>
-          <div class="ui orange basic left pointing label" th:text="${#dates.format(blog.updateTime, 'MMMdd')}">6月14
-          </div>
-        </a>
-        <a href="#" target="_blank" class="item m-margin-top-mini">
-                <span>
-                    <span th:text="${blog.title}">野生大黄牛</span>
-                </span>
-          <div class="ui orange basic left pointing label" th:text="${#dates.format(blog.updateTime, 'MMMdd')}">6月20
-          </div>
-        </a>
-        <a href="#" target="_blank" class="item m-margin-top-mini">
-                <span>
-                    <span th:text="${blog.title}">野生大黄牛</span>
-                </span>
-          <div class="ui orange basic left pointing label" th:text="${#dates.format(blog.updateTime, 'MMMdd')}">6月26
-          </div>
-        </a>
-      </div>
-      <!--*/-->
-    </th:block>
+</div>
+
+<div class="m-padded m-right-bottom m-fixed">
+  <div class="ui vertical icon buttons">
+    <a href="feedback.html" th:href="@{/feedback}" type="button" class="ui blue button">反馈</a>
+    <a href="#" th:href="@{/fblog/input}" class="ui blue button">写贴</a>
+    <button class="ui icon button"><i class="headphones icon"></i></button>
+    <a id="toTop-button" class="ui button"><i class="chevron up icon"></i></a>
   </div>
 </div>
 
@@ -257,6 +268,11 @@
   <script type="text/javascript" src="../static/js/app.js"></script>
   <script type="text/javascript" src="../static/js/main.min.js"></script>
 </th:block>
+<script>
+    /*$('.ui.sticky').sticky({
+        context: '#example1'
+    });*/
+</script>
 
 </body>
 </html>
