还有最后的管理员板块

--- a/src/main/resources/templates/collection_blog.html
+++ b/src/main/resources/templates/collection_blog.html
@@ -170,7 +170,7 @@
     <!--粘性侧边栏-->
     <div class="five wide column">
       <div class="ui sticky">
-        <!--申请列表-->
+        <!--热度前八-->
         <div class="ui container segment">
           <h3>
             热度前八
@@ -185,7 +185,7 @@
             </a>
           </div>
         </div>
-        <!--足迹展示-->
+        <!--收藏量前八-->
         <div class="ui container segment">
           <h3>
             收藏量前八
