--- a/src/main/resources/templates/personal_space.html
+++ b/src/main/resources/templates/personal_space.html
@@ -63,7 +63,7 @@
   <div class="ui feed">
     <div class="event">
       <div class="label">
-        <img src="../static/images/avatar/elliot.jpg">
+        <img src="https://sky-take-out-kafka.oss-cn-beijing.aliyuncs.com/elliot.jpg">
       </div>
       <div class="content">
         <div class="summary">
@@ -83,8 +83,8 @@
           <div class="date">4 天前</div>
         </div>
         <div class="extra images">
-          <a><img src="../static/images/photoWall/defaultImage.png"></a>
-          <a><img src="../static/images/photoWall/defaultImage.png"></a>
+          <a><img src="https://sky-take-out-kafka.oss-cn-beijing.aliyuncs.com/defaultImage.png"></a>
+          <a><img src="https://sky-take-out-kafka.oss-cn-beijing.aliyuncs.com/defaultImage.png"></a>
         </div>
         <div class="meta">
           <a class="like">
@@ -95,7 +95,7 @@
     </div>
     <div class="event">
       <div class="label">
-        <img src="../static/images/avatar/jenny.jpg">
+        <img src="https://sky-take-out-kafka.oss-cn-beijing.aliyuncs.com/helen.jpg">
       </div>
       <div class="content">
         <div class="summary"><a class="user"> Jenny Hess </a> 评论了你的帖子 <a>My Blog</a>
@@ -108,7 +108,7 @@
     </div>
     <div class="event">
       <div class="label">
-        <img src="../static/images/avatar/joe.jpg">
+        <img src="https://sky-take-out-kafka.oss-cn-beijing.aliyuncs.com/joe.jpg">
       </div>
       <div class="content">
         <div class="summary">
@@ -127,15 +127,15 @@
     </div>
     <div class="event">
       <div class="label">
-        <img src="../static/images/avatar/justen.jpg">
+        <img src="https://sky-take-out-kafka.oss-cn-beijing.aliyuncs.com/justen.jpg">
       </div>
       <div class="content">
         <div class="summary"><a>Justen Kitsune</a> 上传 <a>2 张关于你的图片</a>
           <div class="date">4 天前</div>
         </div>
         <div class="extra images">
-          <a><img src="../static/images/photoWall/defaultImage.png"></a>
-          <a><img src="../static/images/photoWall/defaultImage.png"></a>
+          <a><img src="https://sky-take-out-kafka.oss-cn-beijing.aliyuncs.com/defaultImage.png"></a>
+          <a><img src="https://sky-take-out-kafka.oss-cn-beijing.aliyuncs.com/defaultImage.png"></a>
         </div>
         <div class="meta">
           <a class="like">
@@ -146,7 +146,7 @@
     </div>
     <div class="event">
       <div class="label">
-        <img src="../static/images/avatar/jenny.jpg">
+        <img src="https://sky-take-out-kafka.oss-cn-beijing.aliyuncs.com/helen.jpg">
       </div>
       <div class="content">
         <div class="summary">
@@ -165,7 +165,7 @@
     </div>
     <div class="event">
       <div class="label">
-        <img src="../static/images/avatar/joe.jpg">
+        <img src="https://sky-take-out-kafka.oss-cn-beijing.aliyuncs.com/joe.jpg">
       </div>
       <div class="content">
         <div class="summary">
@@ -175,7 +175,7 @@
         <div class="ui extra items">
           <div class="item">
             <a class="ui small image">
-              <img src="../static/images/photoWall/defaultImage.png">
+              <img src="https://sky-take-out-kafka.oss-cn-beijing.aliyuncs.com/defaultImage.png">
             </a>
             <div class="content">
               <a class="header">可爱的小狗</a>
@@ -196,7 +196,7 @@
     </div>
     <div class="event">
       <div class="label">
-        <img src="../static/images/avatar/justen.jpg">
+        <img src="https://sky-take-out-kafka.oss-cn-beijing.aliyuncs.com/justen.jpg">
       </div>
       <div class="content">
         <div class="summary"><a class="user"> Jenny Hess </a> 收藏了你的帖子
