--- a/src/main/resources/templates/archives.html
+++ b/src/main/resources/templates/archives.html
@@ -68,7 +68,7 @@
               </a>
               <span class="right floated action-links"
                     style="position: absolute; bottom: 0; right: 0; margin-right: 5px!important; margin-bottom: 3px!important;">
-                <a href="#" th:onclick="deleteBlog([[${blog.id}]])">删除</a>&nbsp;
+                <a href="#" th:onclick="deleteBlog([[${blog.id}]], [[${blog.forum.id}]])">删除</a>&nbsp;
                 <a href="#" target="_blank" th:href="@{/fblog/edit/{id}(id=${blog.id})}">编辑</a></span>
             </div>
           </div>
@@ -76,6 +76,15 @@
       </ul>
     </section>
   </th:block>
+</div>
+
+<div class="m-padded m-right-bottom m-fixed">
+  <div class="ui vertical icon buttons">
+    <a href="feedback.html" th:href="@{/feedback}" type="button" class="ui blue button">反馈</a>
+    <a href="#" th:href="@{/fblog/input}" class="ui blue button">写贴</a>
+    <button class="ui icon button"><i class="headphones icon"></i></button>
+    <a id="toTop-button" class="ui button"><i class="chevron up icon"></i></a>
+  </div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
@@ -94,6 +103,10 @@
 
     $('.menu.toggle').click(function () {
         $('.m-item').toggleClass('m-mobile-hide');
+    });
+
+    $('#toTop-button').click(function () {
+        $(window).scrollTo(0, 500);
     });
 
     async function deleteAccount() {
@@ -119,9 +132,9 @@
         }
     }
 
-    async function deleteBlog(id) {
+    async function deleteBlog(id, forumId) {
         if (window.confirm("确认要删除嘛？帖子相关的所有内容都将被删除")) {
-            const url = '/dev/fblog/delete/' + id;
+            const url = '/dev/fblog/delete/' + id + '?forumId=' + forumId;
             // 发起GET请求
             await fetch(url, {
                 method: 'POST',
